--- a/package.json
+++ b/package.json
@@ -107,5 +107,8 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "resolutions": {
+  "@achrinza/node-ipc": "^10.0.0"
+  }
 }
