--- a/user-data/conf.yml
+++ b/user-data/conf.yml
@@ -122,3 +122,28 @@ sections:
         id: 0_573_makerworld
     filteredItems:
       - *ref_8
+  - name: API
+    displayData:
+      sortBy: default
+      rows: 1
+      cols: 1
+      collapsed: false
+      hideForGuests: false
+    items:
+      - &ref_9
+        title: API SITE ACCESS
+        description: prod
+        icon: si-httpie
+        url: api.app.infn.it/site-access/v3/api-docs
+        target: newtab
+        id: 0_218_apisiteaccess
+      - &ref_10
+        title: API SITE ACCESS
+        description: Test
+        icon: si-httpie
+        url: api.app.infn.it/identity/v3/api-docs
+        target: newtab
+        id: 1_218_apisiteaccess
+    filteredItems:
+      - *ref_9
+      - *ref_10
