--- a/user-data/conf.yml
+++ b/user-data/conf.yml
@@ -105,9 +105,25 @@ sections:
         url: https://userportal.app.infn.it/
         target: newtab
         id: 1_556_userportalprod
+      - &ref_8
+        title: BOOKING
+        description: Prod
+        icon: si-bookstack
+        url: https://booking.dsi.infn.it/
+        target: newtab
+        id: 2_556_booking
+      - &ref_9
+        title: BOOKING
+        description: Test
+        icon: si-bookstack
+        url: https://booking.dsi.infn.it/
+        target: newtab
+        id: 3_556_booking
     filteredItems:
       - *ref_6
       - *ref_7
+      - *ref_8
+      - *ref_9
   - name: FINANZA
     displayData:
       sortBy: default
@@ -116,39 +132,13 @@ sections:
       collapsed: false
       hideForGuests: false
     items:
-      - &ref_8
+      - &ref_10
         title: BudgetBakers
         icon: https://web-new.budgetbakers.com/wallet/logo-image-only.svg
         url: https://web-new.budgetbakers.com/it-IT/dashboard
         target: newtab
         id: 0_519_budgetbakers
     filteredItems:
-      - *ref_8
-  - name: BADGE INFN
-    displayData:
-      sortBy: default
-      rows: 1
-      cols: 1
-      collapsed: false
-      hideForGuests: false
-    items:
-      - &ref_9
-        title: Lista Badge
-        description: badge su percona
-        icon: >-
-          https://png.pngtree.com/png-clipart/20191120/original/pngtree-credit-or-debit-card-icon-png-image_5060875.jpg
-        url: https://www-localservices.infn.it/badges/lista_badges.php
-        target: newtab
-        id: 0_670_listabadge
-      - &ref_10
-        title: Sync Badge
-        description: su percona
-        icon: >-
-          https://png.pngtree.com/png-clipart/20191120/original/pngtree-credit-or-debit-card-icon-png-image_5060875.jpg
-        url: http://www.infn.it/badges/load_badges.php
-        id: 1_670_syncbadge
-    filteredItems:
-      - *ref_9
       - *ref_10
   - name: Phoebus
     displayData:
